# proc_gen

./: .gitignore  Cargo.toml
assets/shaders/: path_blend_ext.wgsl
src/: lib.rs
src/core/: collider.rs  components.rs  fbm_data.rs  generator_plugin.rs  mod.rs  rand_data.rs  sample_size.rs  seeded_or_not.rs  spread_data.rs  structure.rs  structure_error.rs  structure_key.rs  structure_reference.rs  tags.rs  tmaterial.rs  wobble.rs
src/event_system/: event_listeners.rs  event_system_plugin.rs  mod.rs  spawn_events.rs  spawn_macro.rs  spawnable.rs
src/event_system/spawnables/: structure.rs
src/management/: audio_management.rs  material_autoloader.rs  mod.rs  scene_io.rs  structure_management.rs
src/materials/: mod.rs  path_blend.rs
src/serialization/: caching.rs  mod.rs  serialization.rs
src/spawning/: euler_transform.rs  helpers.rs  light_spawning.rs  mesh_spawning.rs  mod.rs  object_logic.rs  scene_spawning.rs  structure_spawning.rs  transformation.rs
src/systems/: events.rs
tests/: Cargo.toml  build.rs
tests/assets/models/Tree/: leaves.glb
tests/assets/structures/: MapExit.arch  atmospheric_setup.arch  atmospheric_setup_castle.arch  atmospheric_setup_tree.arch  map_paths.arch  pair_of_castles.arch  test_unit.arch
tests/assets/structures/Castle/: castle_core.arch  castle_with_doors.arch  castle_with_trees.arch  damaged_castle.arch  empty.arch
tests/assets/structures/Castle/Pathing/: pass2.arch
tests/assets/structures/Castle/Quadrants/: empty_quadrant.arch  fork_quadrant.arch  hook_quadrant.arch  hook_quadrant_a.arch  hook_quadrant_b.arch  knife_quadrant_a.arch  knife_quadrant_b.arch  spoon_quadrant.arch
tests/assets/structures/Castle/Sectors/: flat-roof.arch  sector.arch  tower-roof.arch  tower-square-base-roof-tag.arch  tower-square-top-roof.arch  tower-structure-tier1.arch  tower-structure-tier2.arch  tower-structure.arch
tests/assets/structures/Castle/WallParts/: dead_end.arch  dead_end_alt.arch  door_candidate.arch  door_model.arch  doorway_model.arch  doorway_with_door.arch  wall_corner_model.arch  wall_corner_one_door.arch  wall_corner_one_door_alt.arch  wall_model.arch
tests/assets/structures/Survival/: floor.arch
tests/assets/structures/Trees/: angled_branch.arch  angled_large_branch.arch  angled_large_branch_list.arch  branch.arch  branch_cluster.arch  branch_with_leaves.arch  large_branch.arch  leaves.arch  massive_branch.arch  maybe_angled_branch.arch  maybe_angled_branch_list.arch  maybe_angled_large_branch_list.arch
tests/assets/ui/: ui_sprite_names.rs
tests/imported_assets/Default/models/Tree/: branch.glb
tests/imported_assets/Default/structures/: atmospheric_setup_castle.arch  atmospheric_setup_map.arch  atmospheric_setup_tree.arch  map_paths.arch  pair_of_castles.arch  test_unit.arch
tests/imported_assets/Default/structures/Castle/: castle.arch  castle_with_trees.arch  quadrant.arch
tests/imported_assets/Default/structures/Castle/Quadrants/: hook_quadrant_a.arch  hook_quadrant_b.arch  knife_quadrant.arch  quadrant_list.arch
tests/imported_assets/Default/structures/Castle/Sectors/: flat-roof.arch  sector.arch  tower-roof.arch  tower-square-base-top-roof-tag.arch  tower-square-top-roof.arch  tower-structure-tier1.arch  tower-structure-tier2.arch  tower-structure.arch
tests/imported_assets/Default/structures/Castle/WallParts/: dead_end_all_doors.arch  door_model.arch  doorway_model.arch  doorway_with_door.arch  wall_corner.arch  wall_corner_both_doors.arch  wall_corner_model.arch
tests/imported_assets/Default/structures/Survival/: floor.arch
tests/imported_assets/Default/structures/Trees/: angled_branch.arch  branch.arch  branch_cluster.arch  branch_with_leaves.arch  leaves.arch  leaves_4_of_5_list.arch  massive_branch.arch  maybe_angled_branch.arch  maybe_angled_large_branch.arch  tree.arch
tests/src/: camera.rs  generation.rs  input_manager.rs  main.rs
