[package]
name = "proc_gen"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Procedural generation library"
license = "MIT"
repository = "https://github.com/BaronVonScrub/proc_gen"
exclude = ["tests/**"]

[dependencies]

bevy = { version = "0.15.3", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
    "asset_processor",
    "embedded_watcher",
    "file_watcher",
    "basis-universal",
    "serialize"
] }
bevy_render = "0.15.3"
bevy_asset = "0.15.3"
bevy_reflect = "0.15.3"
image = "0.25.1"
glob = "0.3.1"
bevy-inspector-egui = "0.29.1"
bevy_egui = "0.33.0"
rand = { version = "0.8.5", features = [] }
wasm-bindgen = { version = "0.2.89", features = [] }
egui_extras = { version = "0.31.0", features = ["all_loaders"]}
bevy_atmosphere = { version = "0.12.2", optional = true }
indexmap = "2.1.0"
bevy_asset_loader = "0.22.0"
rand_core = "0.9.2"
bevy_rand = "0.9.0"
bevy_prng = { version = "0.9.0", features = ["rand_chacha", "wyrand"] }
serde = { version = "1.0.197", features = ["derive"] }
ron = "0.8.1"
walkdir = "2.5.0"
bevy_utils = "0.15.3"
tiff = "0.9.1"
bevy_pbr = "0.15.3"
bevy_math = "0.15.3"
statrs = "0.18.0"
libnoise = { version ="1.1.2", features = ["image"] }
oxidized_navigation = { version = "0.12.0", features = ["rapier", "debug_draw"] }
bevy_rapier3d = "0.28.0"
futures = "0.3.30"
itertools = "0.14.0"
lazy_static = "1.4.0"
bevy_image = "0.15.3"
uuid = "1.12.0"
typetag = "0.2.19"

[dependencies.bevy_kira_audio]
version = "0.22.0"
default-features = false
features = ["mp3"]

[build-dependencies]
image = "0.25.1"

[lib]
name = "proc_gen"
path = "src/lib.rs"

[features]
test = []
debug = ["bevy_rapier3d/debug-render"]
atmosphere = ["dep:bevy_atmosphere"]

[workspace]
members = ["tests"]

[workspace.dependencies]
proc_gen = { path = "." }