[package]
name = "crate_testing"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
proc_gen = { path = ".." }
bevy = "0.15.3"
bevy_kira_audio = { version = "0.22.0", default-features = false, features = ["mp3"] }
bevy-inspector-egui = "0.29.1"
bevy_atmosphere = "0.12.2"
bevy_math = "0.15.3"
bevy_utils = "0.15.3"
bevy_pbr = "0.15.3"

[build-dependencies]
image = "0.25.1"

[[bin]]
name = "main"
path = "src/main.rs"