[package]
name = "crate_testing"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
proc_gen = { workspace = true }
bevy = "0.15.3"
bevy_gizmos = "0.15.3"
bevy_kira_audio = { version = "0.22.0", default-features = false, features = ["mp3"] }
bevy-inspector-egui = "0.29.1"
bevy_atmosphere = { version = "0.12.2", optional = true }
bevy_math = "0.15.3"
bevy_utils = "0.15.3"
bevy_pbr = "0.15.3"
bevy_rapier3d = "0.28.0"
oxidized_navigation = { version = "0.12.0", features = ["rapier", "debug_draw"] }

[build-dependencies]
image = "0.25.1"

[[bin]]
name = "main"
path = "src/main.rs"

[features]
debug = ["proc_gen/debug"]
castle = []
tree = []
map = []
atmosphere = ["proc_gen/atmosphere", "dep:bevy_atmosphere"]